fix v-viewer(delete static because img maybe change) and finish album jump and remove req when music is not ok

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -132,7 +132,6 @@ video {
   width: 88vw;
   height: 77vh;
   overflow: hidden;
-  padding-left: 10px;
 }
 
 .main img {
